--- a/website_profile/adinan.html
+++ b/website_profile/adinan.html
@@ -3,7 +3,7 @@
 		<h1>Adinan Alves de Brito Filho</h1>
 		<h2>Sobre mim</h2>
 		<img src="./imagens/banner_adinan.jpg" width="600" alt="Fotografia: Adinan tocando violão em um jardim ao entardecer." />
-		<p>Sou Desenvolvedor Back-End na IBM, estudante do Bacharelado em Engenharia da Informação na Universidade Federal do ABC e Técnico em Informática pela ETEC Sapopemba. Sou membro do Laboratório de Sinais e Sistemas da Universidade Federal do ABC. Realizei duas iniciações científicas nas áreas de Processamento Digital de Sinais e Codificação Multimídia e apresentei ambas em conferências locais e internacionais.</p>
+		<p>Sou Desenvolvedor Back-End na IBM, estudante do Bacharelado em Engenharia da Informação na Universidade Federal do ABC e Técnico em Informática pela ETEC Sapopemba. Sou membro do Laboratório de Sinais e Sistemas da Universidade Federal do ABC. Realizei duas iniciações científicas nas áreas de Processamento Digital de Sinais e Codificação Multimídia e apresentei ambas em conferências regionais e internacionais.</p>
 
 		<h2>Meu avatar: Scooby Doo</h2>
 		<img src="./imagens/scooby.png" height="200"/>
